[gd_scene load_steps=4 format=3 uid="uid://xfso3pnxq3hd"]

[ext_resource type="Texture2D" uid="uid://5u80iyco3rl2" path="res://Images/Microscope.png" id="1_84fsk"]
[ext_resource type="Script" path="res://Entity/Microscope/Microscope.gd" id="1_ou1sj"]
[ext_resource type="Texture2D" uid="uid://d3xbxt5fwwovw" path="res://Images/MicroscopeDish.png" id="2_xaxgg"]

[node name="Microscope" type="Node2D"]
script = ExtResource("1_ou1sj")

[node name="Microscope" type="Sprite2D" parent="."]
texture = ExtResource("1_84fsk")
centered = false

[node name="MicroscopeDish" type="Sprite2D" parent="."]
position = Vector2(7, 59)
texture = ExtResource("2_xaxgg")
centered = false
hframes = 3
frame = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, 114, 0, 100, 5, 94, 24, 94, 24, 78, 10, 78, 12, 58, 26, 57, 29, 41, 35, 18, 44, -1, 54, 2, 52, 17, 60, 47, 77, 62, 79, 78, 63, 78, 63, 93, 84, 94, 90, 114)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
